# library-backend

./: .env  .gitignore  Dockerfile  Makefile  README.md  application.py  docker-compose.yml  pyproject.toml
library_api/config/: flask_config.py  postgres_config.py
library_api/domain/: __init__.py  book.py  bookshelf.py  citation.py  reading.py  user.py
library_api/domain/data_access_layer/: build_connection_string.py  db.py  engine.py  session.py
library_api/modules/auth/: auth_routes.py
library_api/modules/auth/commands/: new_user_command.py
library_api/modules/auth/queries/: user_query.py
library_api/modules/auth/services/: auth_service.py
library_api/modules/books/: books_routes.py
library_api/modules/books/commands/: delete_book_command.py  edit_book_info.py  new_book_command.py
library_api/modules/books/queries/: get_book_query.py
library_api/modules/bookshelfs/: bookshelfs_routes.py
library_api/modules/citations/: citations_routes.py
library_api/modules/readings/: reading_routes.py
migrations/: env.py
migrations/versions/: 0e3d2e53733d_add_reading_table.py  596a01c35e4d_add_citation_author_property.py  7e175cd0d06c_add_delete_at_for_book.py  8458c62bdb9d_add_delete_at_for_bookshelf.py  9af5f0a88329_add_citations_table.py  c46d566ac06c_add_book_table.py  cae87203b8b5_add_delete_at_for_reading.py  d346c45b75d2_add_bookshelf_table.py  d7a8a762431d_add_additional_fields_to_book.py  e8fc9f5f4da4_add_description_book_property.py  f4b959f0f19f_add_user_table.py  f9057065d0a4_add_delete_at_for_citations.py
(+12 files in other folders)
