[tool.poetry]
name = "library-backend"
version = "0.1.0"
description = ""
authors = [
    "Maria Yadryshnikova <reeyardma@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.9"
requests = "^2.28.2"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^4.0.2"
flask-cors = "^3.0.10"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.7"
flask-jwt-extended = "^4.6.0"
